# lcompendium

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_entries.py  2c414e3f4bfd_add_bilingual_species_name_and_.py  71af65a86f59_create_users_table.py  8caef8775e3c_add_is_approved_and_is_superuser_to_.py
backend/app/: cli.py  config.py  database.py  deps.py  main.py
backend/app/llm/: __init__.py  base.py  claude.py  inaturalist.py  openai.py
backend/app/models/: entry.py  user.py
backend/app/routers/: auth.py  entries.py
backend/app/schemas/: entry.py  user.py
backend/app/services/: auth.py  identifier.py  storage.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  client.ts  entries.ts
frontend/src/auth/: AuthProvider.tsx
frontend/src/components/: EntryCard.css  EntryCard.tsx  Layout.css  Layout.tsx  LocationPicker.css  LocationPicker.tsx  PhotoUploader.css  PhotoUploader.tsx  Spinner.css  Spinner.tsx
frontend/src/i18n/: LanguageProvider.tsx  translations.ts  useLocalized.ts
frontend/src/pages/: AuthPage.css  CompendiumPage.css  CompendiumPage.tsx  EntryDetailPage.css  EntryDetailPage.tsx  LoginPage.tsx  RegisterPage.tsx  UploadPage.css  UploadPage.tsx
frontend/src/types/: auth.ts  entry.ts
