[project]
name = "lcompendium-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "aioboto3>=13",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.0",
    "email-validator>=2.0",
    "anthropic>=0.40",
    "openai>=1.50",
    "httpx>=0.27",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-asyncio", "httpx"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 99
